services/media/navidrome/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/name: navidrome
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
