services/media/navidrome/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
spec:
  parentRefs:
    - name: traefik-external
      namespace: traefik
  hostnames:
    - navidrome.wildfreddy.fivebytestudios.com
  rules:
    - backendRefs:
        - name: navidrome
          port: 80
